--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/firebase": "^8.2.2",
     "@nuxtjs/robots": "^2.5.0",
+    "@nuxtjs/toast": "^3.3.1",
+    "@tailwindcss/forms": "^0.5.0",
     "core-js": "^3.19.3",
+    "firebase": "^9.6.10",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
